[gd_scene load_steps=17 format=3 uid="uid://dgt15dtho8llq"]

[ext_resource type="Script" path="res://grav_enemy.gd" id="1_gen8x"]
[ext_resource type="Texture2D" uid="uid://dvxoedtxongxp" path="res://Assets/Sprites/IMG_2415.PNG" id="2_v8ymn"]
[ext_resource type="PackedScene" uid="uid://bycrnh7qsh5q" path="res://Components/hitbox_component.tscn" id="5_tbo5n"]
[ext_resource type="PackedScene" uid="uid://bix654en2prn3" path="res://Scenes/killzone.tscn" id="7_wvx6j"]
[ext_resource type="Script" path="res://Components/gravity_component.gd" id="9_rxysn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_emi07"]
atlas = ExtResource("2_v8ymn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hltp4"]
atlas = ExtResource("2_v8ymn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6uwi"]
atlas = ExtResource("2_v8ymn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0flhi"]
atlas = ExtResource("2_v8ymn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24xf5"]
atlas = ExtResource("2_v8ymn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vid6g"]
atlas = ExtResource("2_v8ymn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oyq3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_emi07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hltp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6uwi")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0flhi")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24xf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vid6g")
}],
"loop": true,
"name": &"walk",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qo4s"]
size = Vector2(42, 34)

[sub_resource type="CircleShape2D" id="CircleShape2D_vnfi3"]
radius = 37.0135

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vswal"]
size = Vector2(51, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qttbg"]
size = Vector2(61, 46)

[node name="Porcupine" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_gen8x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_oyq3p")
animation = &"walk"
flip_h = true

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("9_rxysn")

[node name="Killzone" parent="." instance=ExtResource("7_wvx6j")]

[node name="kill_shape" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_5qo4s")
debug_color = Color(1, 0.0117647, 0.0196078, 0.682353)

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="detection_shape" type="CollisionShape2D" parent="player_detection"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_vnfi3")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-29.46, 2.08165e-12)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(26.84, 2.08165e-12)

[node name="physics_shape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -6)
shape = SubResource("RectangleShape2D_vswal")
debug_color = Color(6.97896e-07, 0.334191, 0.393609, 0.42)

[node name="HitboxComponent" parent="." instance=ExtResource("5_tbo5n")]
health = 5

[node name="Hitbox" type="Area2D" parent="." groups=["porcupine"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, -6)
shape = SubResource("RectangleShape2D_qttbg")

[connection signal="area_entered" from="player_detection" to="." method="_on_player_detection_zone_area_entered"]
[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
